# cmake-template

./: .justfile  CMakeLists.txt  README.md
src/: main.cpp
